--- a/README.Rmd
+++ b/README.Rmd
@@ -22,33 +22,12 @@ The goal of metacell.flow is to infer differentiation flow models from single ce
 
 ## Installation
 
-You can install the released version of metacell.flow from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of metacell.flow from github with:
 
 ``` r
-install.packages("metacell.flow")
+remotes::install_github("tanaylab/metacell.flow")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
 
-```{r example}
-library(metacell.flow)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
